# UltraLog

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  ULTRALOG_INTEGRATION.md  UltraLog.code-workspace  build.rs  bun.lockb  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: docs-expert.md  ecu-parser-expert.md  i18n-translator.md
.githooks/: pre-commit
.github/: RELEASE_TEMPLATE.md  RELEASE_TEMPLATE_BETA.md  release.yml
.github/workflows/: beta-release.yml  ci.yml  release.yml
components/: CoreDataCard.vue  PlaybackChart.vue  ResponsiveLineChart.vue  SideBarHeader.vue  SidebarCsvItem.vue
docs/: index.html  robots.txt  sitemap.xml
exampleLogs/RomRaider/: romraiderlog_20251031_170713.csv
exampleLogs/aem/: aemlog.daq
exampleLogs/bluedriver/: DataLog-Jan_16_2026_3-00-09-PM.csv  SBM22GCA4MW001405_Aug_17__2025_08_45_PM_LiveData.csv  SBM22GCA4MW001405_Nov_09__2025_04_20_PM_LiveData.csv
exampleLogs/ducati/: ducatiLog.3ds
exampleLogs/emerald/: EM Log MG ZS Turbo idle and rev.lg1  EM Log MG ZS Turbo idle and rev.lg2  EM Log MG ZS Turbo short drive back diff channels.lg1  EM Log MG ZS Turbo short drive back diff channels.lg2  EM Log MG ZS Turbo short drive.lg1  EM Log MG ZS Turbo short drive.lg2
exampleLogs/link/: ECU Log 2024-02-8 3;56;20 pm.llg5  ECU Log 2024-03-14 2;04;31 pm.llg5  ECU Log 2024-03-22 11;20;32 am.llg5  linklog.llg
exampleLogs/rusefi/: Log1.mlg
i18n/: ar.yaml  bn.yaml  de.yaml  en.yaml  es.yaml  fr.yaml  hi.yaml  id.yaml  it.yaml  ja.yaml  pt-BR.yaml  pt-PT.yaml  ru.yaml  ur.yaml  zh-CN.yaml
installer/: ultralog.iss
layouts/: default.vue
linux/: build-appimage.sh  ultralog.desktop
pages/: index.vue
scripts/: build-release.sh
src/: App.vue  analytics.rs  app.rs  computed.rs  expression.rs  i18n.rs  lib.rs  main.rs  normalize.rs  settings.rs  state.rs  units.rs  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/parsers/: haltech.rs  mod.rs  types.rs
src/adapters/: api.rs  cache.rs  mod.rs  registry.rs  types.rs
src/analysis/: afr.rs  derived.rs  filters.rs  mod.rs  statistics.rs
src/anomaly/: mod.rs
src/components/: ChannelCard.vue  ChannelToast.vue  NavBar.vue  PlaybackChart.vue  ThemeController.vue
src/ipc/: commands.rs  handler.rs  mod.rs  server.rs
src/llm/: mod.rs
src/mcp/: client.rs  mod.rs  server.rs
src/parsers/: aim.rs  bluedriver.rs  ecumaster.rs  emerald.rs  haltech.rs  link.rs  locomotive.rs  mod.rs  romraider.rs  speeduino.rs  types.rs
src/styles/: styles.css
src/types/: constants.ts  index.d.ts
src/ui/: activity_bar.rs  analysis_panel.rs  channels.rs  channels_panel.rs  chart.rs  computed_channels_manager.rs  export.rs  export.rs.bak  files_panel.rs  formula_editor.rs  histogram.rs  histogram.rs.backup  icons.rs  menu.rs  mod.rs  normalization_editor.rs  scatter_plot.rs  settings_panel.rs  side_panel.rs  sidebar.rs  tab_bar.rs  timeline.rs  toast.rs  tool_properties_panel.rs  tool_switcher.rs  tools_panel.rs  update_dialog.rs
tests/: computed_channels_tests.rs  core_tests.rs  integration.rs  integration_tests.rs  parsers.rs
tests/common/: mod.rs
tests/core/: computed_channels_tests.rs  expression_tests.rs  i18n_tests.rs  mod.rs  normalize_tests.rs  settings_tests.rs  state_tests.rs  units_tests.rs
tests/integration/: data_integrity_tests.rs  file_loading_tests.rs  mod.rs
tests/parsers/: aim_tests.rs  ecumaster_tests.rs  emerald_tests.rs  format_detection_tests.rs  haltech_tests.rs  link_tests.rs  mod.rs  romraider_tests.rs  speeduino_tests.rs
types/: index.d.ts
wiki/: FAQ.md  Home.md  Installation.md  Privacy.md  Supported-ECU-Formats.md  _Sidebar.md
