[package]
name = "ultralog"
version = "1.5.0"
edition = "2021"
description = "A high-performance ECU log viewer written in Rust"
authors = ["Cole Gentry"]
license = "AGPL-3.0"
repository = "https://github.com/SomethingNew71/UltraLog"
readme = "README.md"
keywords = ["ecu", "datalog", "haltech", "automotive", "tuning"]
categories = ["visualization", "gui"]
default-run = "ultralog"

[[bin]]
name = "ultralog"
path = "src/main.rs"

[[bin]]
name = "test_parser"
path = "src/bin/test_parser.rs"

[dependencies]
# GUI Framework
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11",
    "wayland",
] }
egui_plot = "0.34"
egui_extras = { version = "0.33", features = ["image"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing
regex = "1.12"
strum = { version = "0.27", features = ["derive"] }
rayon = "1.11"  # Parallel iteration for parsing

# File handling
rfd = "0.16"  # Native file dialogs
open = "5"    # Open URLs in default browser
memmap2 = "0.9"  # Memory-mapped file loading for large files

# Auto-update
ureq = { version = "3.0", features = ["json"] }  # Minimal HTTP client
semver = "1.0"  # Version comparison
zip = "2.2"     # ZIP extraction for Windows updates
flate2 = "1.0"  # Gzip decompression for Linux updates
tar = "0.4"     # Tar archive extraction for Linux updates

# Image loading (for app icon and PNG export)
image = { version = "0.25", default-features = false, features = ["png"] }

# PDF generation for chart export
printpdf = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation for anonymous user IDs
uuid = { version = "1.0", features = ["v4"] }

# Platform-specific: AIM XRK/DRK file parsing via native library
# Only available on Windows and Linux x86_64
[target.'cfg(all(any(target_os = "windows", target_os = "linux"), target_arch = "x86_64"))'.dependencies]
xdrk = "1.0"

# Windows-specific: embed icon and manifest
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# macOS-specific: set app name in dock
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true

# Faster compile times for debug builds
[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
