[package]
name = "ultralog"
version = "2.1.2"
edition = "2021"
description = "A high-performance ECU log viewer written in Rust"
authors = ["Cole Gentry"]
license = "AGPL-3.0"
repository = "https://github.com/SomethingNew71/UltraLog"
readme = "README.md"
keywords = ["ecu", "datalog", "haltech", "automotive", "tuning"]
categories = ["visualization", "gui"]
default-run = "ultralog"

[[bin]]
name = "ultralog"
path = "src/main.rs"

[[bin]]
name = "test_parser"
path = "src/bin/test_parser.rs"

[dependencies]
# GUI Framework
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11",
    "wayland",
] }
egui_plot = "0.34.0"
egui_extras = { version = "0.33.3", features = ["image"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # For OpenECU Alliance adapter specs

# Parsing
regex = "1.12"
strum = { version = "0.27", features = ["derive"] }
rayon = "1.11"  # Parallel iteration for parsing

# Expression evaluation (for computed channels)
meval = "0.2"

# Platform-specific directories
dirs = "5.0"

# File handling
rfd = "0.16"  # Native file dialogs
open = "5"    # Open URLs in default browser
memmap2 = "0.9"  # Memory-mapped file loading for large files

# Auto-update
ureq = { version = "3.1", features = ["json"] }  # Minimal HTTP client
semver = "1.0"  # Version comparison
zip = "2.2"     # ZIP extraction for Windows updates (v7.0 has breaking changes)
flate2 = "1.0"  # Gzip decompression for Linux updates
tar = "0.4"     # Tar archive extraction for Linux updates

# Image loading (for app icon and PNG export)
image = { version = "0.25", default-features = false, features = ["png"] }

# PDF generation for chart export
printpdf = "0.7"  # v0.8 has breaking API changes requiring code refactoring

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Internationalization
rust-i18n = "3.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation for anonymous user IDs
uuid = { version = "1.0", features = ["v4"] }

# Windows-specific: embed icon and manifest
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# macOS-specific: set app name in dock
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"

[dev-dependencies]
# Note: cargo-tarpaulin is installed as a cargo subcommand, not a library dependency
# Run coverage with: cargo tarpaulin --out Html --exclude-files "src/ui/*" "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true

# Faster compile times for debug builds
[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
